<resources>
    <string name="app_name">Topin</string>
    <string name="version">Versão: 0.0.1</string>
    <string name="choose_your_state">Escolha seu estado</string>
    <string name="city">cidade</string>
    <string name="state">estado</string>
    <string name="next">Continuar</string>
    <string name="favorite">Favorito</string>
    <string name="loading">Carregando...</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_favorites">Favoritas</string>
    <string name="title_lines">Linhas</string>
    <string name="title_points">Pontos</string>
    <string name="title_routes">Rotas</string>
    <string name="routes">Rotas</string>
    <string name="line">linha</string>
    <string name="line_full">linha_full</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda</string>
    <string name="tuesday">Terça</string>
    <string name="wednesday">Quarta</string>
    <string name="thursday">Quinta</string>
    <string name="friday">Sexta</string>
    <string name="saturday">Sábado</string>
    <string name="title_schedules">Horários</string>
    <string name="title_home">Início</string>
    <string name="title_feedback">Feedback</string>
    <string name="form_name">Nome</string>
    <string name="form_email">E-mail</string>
    <string name="form_contact">Contato</string>
    <string name="form_reason">Motivo</string>
    <string name="form_message">Mensagem</string>
    <string name="txt_send">Enviar</string>
</resources>

